[package]
name = "sse-client"
version = "1.0.2"
authors = ["Vinicius Gerevini <viniciusgerevini@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/viniciusgerevini/sse-client"
description = "Client for streams of Server-Sent Events"
keywords = ["sse", "server-sent", "events", "event-source"]

[dependencies]
url = "1.7.0"

[dev-dependencies]
http-test-server = "1.0.0"
